<?xml version="1.0" ?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>net.j7</groupId>
		<artifactId>j7-tools</artifactId>
		<version>1.0.0</version>
	</parent>
	<groupId>org.delafer.xanderView</groupId>
	<artifactId>xanderview-j7</artifactId>
	<name>xanderview-j7</name>
	<version>1.0.0</version>
	<packaging>jar</packaging>

	<!-- <url>http://maven.apache.org</url> -->
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>16</source>
					<target>16</target>
					<showWarnings>false</showWarnings>
					<debug>false</debug>
					<optimize>true</optimize>
					<!--<compilerArgument>-Xlint:none</compilerArgument>-->
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>java.desktop/sun.awt.windows=ALL-UNNAMED</arg>
						<arg>-Xlint:none</arg>
						<arg>--add-opens</arg>
						<arg>java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>

							<!--<minimizeJar>true</minimizeJar> -->
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>org.delafer.xanderView.gui.MainEntryPoint</mainClass>
								</transformer>
							</transformers>
							<filters>

								<!-- Exclude of dummy.sf and dummy.dsa -->
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.j7.commons</groupId>
			<artifactId>commons-j7</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jocl</groupId>
			<artifactId>jocl</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.carrotsearch</groupId>
			<artifactId>hppc</artifactId>
		</dependency>
		<dependency>
			<groupId>com.jhlabs</groupId>
			<artifactId>filters</artifactId>
		</dependency>
		<dependency>
			<groupId>net.jpountz.lz4</groupId>
			<artifactId>lz4</artifactId>
			<version>1.3.0</version>
		</dependency>
		<dependency>
			<groupId>me.xuender</groupId>
			<artifactId>unidecode</artifactId>
			<version>0.0.7</version>
		</dependency>
		<dependency>
			<groupId>net.j7.thirddep</groupId>
			<artifactId>thirddep-j7</artifactId>
		</dependency>
		<dependency>
			<groupId>org.opencv</groupId>
			<artifactId>opencv</artifactId>
		</dependency>
		<dependency>
			<groupId>net.coobird</groupId>
			<artifactId>thumbnailator</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>
</project>
